# rust-payment-app

./: Cargo.toml  README.MD  build.rs
src/: client.rs  server.rs
