[package]
name = "rust-payment-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # mark files as binary crates
name = "payments-server"
path = "src/server.rs"

[[bin]] # mark files as binary crates
name = "payments-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7" # gPRC implementation for Rust
prost = "0.10" # protocal buffer implementation for Rust
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"